--- a/output/team.html
+++ b/output/team.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Team</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/solar/bootstrap.min.css" integrity="sha384-NCwXci5f5ZqlDw+m7FwZSAwboa0svoPPylIW3Nf+GBDsyVum+yArYnaFLE9UDzLd" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/solar/bootstrap.min.css"
+        integrity="sha384-NCwXci5f5ZqlDw+m7FwZSAwboa0svoPPylIW3Nf+GBDsyVum+yArYnaFLE9UDzLd" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
@@ -20,89 +21,84 @@
             </div>
         </div>
     </div>
-    <div class="container-fluid">
+    <div class="container">
         <div class="row">
             <div class="team-area col-md-12 d-flex justify-content-md-around flex-wrap">
-                <!-- Managers -->
-                <div class="card-wrapper">
-                    <div class="card bg-primary text-white employee-card m-5">
-                        <div class="card-header">
-                            <h2 class="card-title">Jamie LaForce</h2>
-                            <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group">
-                                <li class="list-group-item">ID: 55</li>
-                                <li class="list-group-item">Email: <a href="mailto:jamie@mezdurham.com">jamie@mezdurham.com</a></li>
-                                <li class="list-group-item">Office number: 2</li>
-                            </ul>
-                        </div>
+                <!-- Manager -->
+                <div class="card bg-primary text-white employee-card m-5">
+                    <div class="card-header">
+                        <h2 class="card-title">Michael Scott</h2>
+                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: 1</li>
+                            <li class="list-group-item">Email: <a
+                                    href="mailto:michael@dundermifflin.com">michael@dundermifflin.com</a></li>
+                            <li class="list-group-item">Office number: 1</li>
+                        </ul>
                     </div>
                 </div>
-                <!-- Engineers -->
-                <div class="card-wrapper">
-                    <div class="card bg-primary text-white employee-card m-5">
-                        <div class="card-header">
-                            <h2 class="card-title">Kassi Stumb</h2>
-                            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group">
-                                <li class="list-group-item">ID: 11</li>
-                                <li class="list-group-item">Email: <a href="mailto:kassi@chapelhillrestaurantgroup.com">kassi@chapelhillrestaurantgroup.com</a>
-                                </li>
-                                <li class="list-group-item">GitHub: <a href="https://github.com/kassimariemc"
-                                        target="_blank" rel="noopener noreferrer">kassimariemc</a></li>
-                            </ul>
-                        </div>
+                <!-- Engineer -->
+                <div class="card bg-primary text-white employee-card m-5">
+                    <div class="card-header">
+                        <h2 class="card-title">Dwight Schrute</h2>
+                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: 2</li>
+                            <li class="list-group-item">Email: <a
+                                    href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
+                            <li class="list-group-item">GitHub: <a href="https://github.com/battlestargalactica1"
+                                    target="_blank" rel="noopener noreferrer">battlestargalactica1</a></li>
+                        </ul>
                     </div>
                 </div>
-                <div class="card-wrapper">
-                    <div class="card bg-primary text-white employee-card m-5">
-                        <div class="card-header">
-                            <h2 class="card-title">Caroline McNeill</h2>
-                            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group">
-                                <li class="list-group-item">ID: 3</li>
-                                <li class="list-group-item">Email: <a href="mailto:caroline.davenport@gmail.com">caroline.davenport@gmail.com</a></li>
-                                <li class="list-group-item">GitHub: <a href="https://github.com/cdavenport" target="_blank"
-                                        rel="noopener noreferrer">cdavenport</a></li>
-                            </ul>
-                        </div>
+                <!-- Engineer -->
+                <div class="card bg-primary text-white employee-card m-5">
+                    <div class="card-header">
+                        <h2 class="card-title">Creed Bratton</h2>
+                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: 3</li>
+                            <li class="list-group-item">Email: <a
+                                    href="mailto:creed@dundermifflin.com">creed@dundermifflin.com</a></li>
+                            <li class="list-group-item">GitHub: <a href="https://github.com/wackyweedcreed"
+                                    target="_blank" rel="noopener noreferrer">wackyweedcreed</a></li>
+                        </ul>
                     </div>
                 </div>
-                <!-- Interns -->
-                <div class="card-wrapper">
-                    <div class="card bg-primary text-white employee-card m-5">
-                        <div class="card-header">
-                            <h2 class="card-title">Austin Stumb</h2>
-                            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group">
-                                <li class="list-group-item">ID: 06</li>
-                                <li class="list-group-item">Email: <a href="mailto:austin@gmail.com">austin@gmail.com</a>
-                                </li>
-                                <li class="list-group-item">School: UNC</li>
-                            </ul>
-                        </div>
+                <!-- Intern -->
+                <div class="card bg-primary text-white employee-card m-5">
+                    <div class="card-header">
+                        <h2 class="card-title">Jim Halpert</h2>
+                        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: 4</li>
+                            <li class="list-group-item">Email: <a
+                                    href="mailto:jim@dundermifflin.com">jim@dundermifflin.com</a></li>
+                            <li class="list-group-item">School: UNC Chapel Hill</li>
+                        </ul>
                     </div>
                 </div>
-                <div class="card-wrapper">
-                    <div class="card bg-primary text-white employee-card m-5">
-                        <div class="card-header">
-                            <h2 class="card-title">Aaron Stumb</h2>
-                            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-                        </div>
-                        <div class="card-body">
-                            <ul class="list-group">
-                                <li class="list-group-item">ID: 15</li>
-                                <li class="list-group-item">Email: <a href="mailto:astumb@hotmail.com">astumb@hotmail.com</a></li>
-                                <li class="list-group-item">School: Wake Tech</li>
-                            </ul>
-                        </div>
+                <!-- Intern -->
+                <div class="card bg-primary text-white employee-card m-5">
+                    <div class="card-header">
+                        <h2 class="card-title">Andy Bernard</h2>
+                        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+                    </div>
+                    <div class="card-body">
+                        <ul class="list-group">
+                            <li class="list-group-item">ID: 5</li>
+                            <li class="list-group-item">Email: <a
+                                    href="mailto:andy@dundermifflin.com">andy@dundermifflin.com</a></li>
+                            <li class="list-group-item">School: Cornell</li>
+                        </ul>
                     </div>
                 </div>
 
