--- a/output/team.html
+++ b/output/team.html
@@ -21,84 +21,94 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="team-area col-md-12 d-flex justify-content-md-around flex-wrap">
                 <!-- Manager -->
-                <div class="card bg-primary text-white employee-card m-5">
-                    <div class="card-header">
-                        <h2 class="card-title">Michael Scott</h2>
-                        <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 1</li>
-                            <li class="list-group-item">Email: <a
-                                    href="mailto:michael@dundermifflin.com">michael@dundermifflin.com</a></li>
-                            <li class="list-group-item">Office number: 1</li>
-                        </ul>
-                    </div>
-                </div>
-                <!-- Engineer -->
-                <div class="card bg-primary text-white employee-card m-5">
-                    <div class="card-header">
-                        <h2 class="card-title">Dwight Schrute</h2>
-                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 2</li>
-                            <li class="list-group-item">Email: <a
-                                    href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
-                            <li class="list-group-item">GitHub: <a href="https://github.com/battlestargalactica1"
-                                    target="_blank" rel="noopener noreferrer">battlestargalactica1</a></li>
-                        </ul>
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Michael Scott</h2>
+                            <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 1</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:michael@dundermifflin.com">michael@dundermifflin.com</a></li>
+                                <li class="list-group-item">Office number: 1</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <!-- Engineer -->
-                <div class="card bg-primary text-white employee-card m-5">
-                    <div class="card-header">
-                        <h2 class="card-title">Creed Bratton</h2>
-                        <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Dwight Schrute</h2>
+                            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 2</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
+                                <li class="list-group-item">GitHub: <a href="https://github.com/battlestargalactica1"
+                                        target="_blank" rel="noopener noreferrer">battlestargalactica1</a></li>
+                            </ul>
+                        </div>
                     </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 3</li>
-                            <li class="list-group-item">Email: <a
-                                    href="mailto:creed@dundermifflin.com">creed@dundermifflin.com</a></li>
-                            <li class="list-group-item">GitHub: <a href="https://github.com/wackyweedcreed"
-                                    target="_blank" rel="noopener noreferrer">wackyweedcreed</a></li>
-                        </ul>
+                </div>
+                <!-- Engineer -->
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Creed Bratton</h2>
+                            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 3</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:creed@dundermifflin.com">creed@dundermifflin.com</a></li>
+                                <li class="list-group-item">GitHub: <a href="https://github.com/wackyweedcreed"
+                                        target="_blank" rel="noopener noreferrer">wackyweedcreed</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <!-- Intern -->
-                <div class="card bg-primary text-white employee-card m-5">
-                    <div class="card-header">
-                        <h2 class="card-title">Jim Halpert</h2>
-                        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 4</li>
-                            <li class="list-group-item">Email: <a
-                                    href="mailto:jim@dundermifflin.com">jim@dundermifflin.com</a></li>
-                            <li class="list-group-item">School: UNC Chapel Hill</li>
-                        </ul>
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Jim Halpert</h2>
+                            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 4</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:jim@dundermifflin.com">jim@dundermifflin.com</a></li>
+                                <li class="list-group-item">School: UNC Chapel Hill</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
                 <!-- Intern -->
-                <div class="card bg-primary text-white employee-card m-5">
-                    <div class="card-header">
-                        <h2 class="card-title">Andy Bernard</h2>
-                        <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-                    </div>
-                    <div class="card-body">
-                        <ul class="list-group">
-                            <li class="list-group-item">ID: 5</li>
-                            <li class="list-group-item">Email: <a
-                                    href="mailto:andy@dundermifflin.com">andy@dundermifflin.com</a></li>
-                            <li class="list-group-item">School: Cornell</li>
-                        </ul>
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Andy Bernard</h2>
+                            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 5</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:andy@dundermifflin.com">andy@dundermifflin.com</a></li>
+                                <li class="list-group-item">School: Cornell</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
