--- a/output/team.html
+++ b/output/team.html
@@ -52,7 +52,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item">ID: 2</li>
                                 <li class="list-group-item">Email: <a
-                                        href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
+                                        href="mailto:dwight@dunermifflin.com">dwight@dunermifflin.com</a></li>
                                 <li class="list-group-item">GitHub: <a href="https://github.com/battlestargalactica1"
                                         target="_blank" rel="noopener noreferrer">battlestargalactica1</a></li>
                             </ul>
