--- a/output/team.html
+++ b/output/team.html
@@ -6,10 +6,63 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>My Team</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/solar/bootstrap.min.css" integrity="sha384-NCwXci5f5ZqlDw+m7FwZSAwboa0svoPPylIW3Nf+GBDsyVum+yArYnaFLE9UDzLd" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/solar/bootstrap.min.css"
+        integrity="sha384-NCwXci5f5ZqlDw+m7FwZSAwboa0svoPPylIW3Nf+GBDsyVum+yArYnaFLE9UDzLd" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css2?family=Bungee+Inline&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <script src="https://kit.fontawesome.com/c502137733.js"></script>
+    <style>
+        h1 {
+            font-size: 75px;
+            font-family: 'Bungee Inline', cursive;
+        }
+
+        .team-area {
+            background-image: url(bckgrnd.jpg);
+            background-size: cover;
+            background-position: center;
+        }
+
+        .card-wrapper {
+            animation-name: stagger;
+            animation-duration: 250ms;
+            animation-delay: 60ms;
+            animation-fill-mode: both;
+            animation-timing-function: ease-in-out;
+        }
+
+        .card {
+            opacity: .95;
+            width: 22rem;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+        }
+
+        li {
+            font-size: 18px;
+        }
+
+        li:hover {
+            background-color: #002b36;
+        }
+
+        a {
+            color: #A9BDBD;
+        }
+
+        @keyframes stagger {
+            0% {
+                opacity: 0;
+                transform: scale(0.6) translateX(-8px) translateY(-8px);
+            }
+
+            100% {
+                opacity: 1;
+            }
+        }
+    </style>
 </head>
 
 <body>
@@ -24,85 +77,92 @@
         <div class="row">
             <div class="team-area col-md-12 d-flex justify-content-md-around flex-wrap">
                 <!-- Manager -->
-<div class="card-wrapper">
-    <div class="card bg-primary text-white employee-card m-5">
-        <div class="card-header">
-            <h2 class="card-title">Michael Scott</h2>
-            <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
-        </div>
-        <div class="card-body">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 1</li>
-                <li class="list-group-item">Email: <a href="mailto:michael@dundermifflin.com">michael@dundermifflin.com</a></li>
-                <li class="list-group-item">Office number: 1</li>
-            </ul>
-        </div>
-    </div>
-</div>
-<!-- Engineer -->
-<div class="card-wrapper">
-    <div class="card bg-primary text-white employee-card m-5">
-        <div class="card-header">
-            <h2 class="card-title">Dwight Schrute</h2>
-            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-        </div>
-        <div class="card-body">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 2</li>
-                <li class="list-group-item">Email: <a href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
-                <li class="list-group-item">GitHub: <a href="https://github.com/battlestargalactica1" target="_blank" rel="noopener noreferrer">battlestargalactica1</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
-<!-- Engineer -->
-<div class="card-wrapper">
-    <div class="card bg-primary text-white employee-card m-5">
-        <div class="card-header">
-            <h2 class="card-title">Creed Bratton</h2>
-            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
-        </div>
-        <div class="card-body">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 3</li>
-                <li class="list-group-item">Email: <a href="mailto:creed@dundermifflin.com">creed@dundermifflin.com</a></li>
-                <li class="list-group-item">GitHub: <a href="https://github.com/wackyweedcreed" target="_blank" rel="noopener noreferrer">wackyweedcreed</a></li>
-            </ul>
-        </div>
-    </div>
-</div>
- <!-- Intern -->
- <div class="card-wrapper">
-    <div class="card bg-primary text-white employee-card m-5">
-        <div class="card-header">
-            <h2 class="card-title">Jim Halpert</h2>
-            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-        </div>
-        <div class="card-body">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 4</li>
-                <li class="list-group-item">Email: <a href="mailto:jim@dundermifflin.com">jim@dundermifflin.com</a></li>
-                <li class="list-group-item">School: UNC Chapel Hill</li>
-            </ul>
-        </div>
-    </div>
-</div>
- <!-- Intern -->
- <div class="card-wrapper">
-    <div class="card bg-primary text-white employee-card m-5">
-        <div class="card-header">
-            <h2 class="card-title">Nard Dog</h2>
-            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
-        </div>
-        <div class="card-body">
-            <ul class="list-group">
-                <li class="list-group-item">ID: 5</li>
-                <li class="list-group-item">Email: <a href="mailto:andy@dundermifflin.com">andy@dundermifflin.com</a></li>
-                <li class="list-group-item">School: Cornell</li>
-            </ul>
-        </div>
-    </div>
-</div>
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Michael Scott</h2>
+                            <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 1</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:michael@dundermifflin.com">michael@dundermifflin.com</a></li>
+                                <li class="list-group-item">Office number: 1</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- Engineer -->
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Dwight Schrute</h2>
+                            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 2</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:dwight@dundermifflin.com">dwight@dundermifflin.com</a></li>
+                                <li class="list-group-item">GitHub: <a href="https://github.com/battlestargalactica1"
+                                        target="_blank" rel="noopener noreferrer">battlestargalactica1</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- Engineer -->
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Creed Bratton</h2>
+                            <h3 class="card-title"><i class="fas fa-glasses mr-2"></i>Engineer</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 3</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:creed@dundermifflin.com">creed@dundermifflin.com</a></li>
+                                <li class="list-group-item">GitHub: <a href="https://github.com/wackyweedcreed"
+                                        target="_blank" rel="noopener noreferrer">wackyweedcreed</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- Intern -->
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Jim Halpert</h2>
+                            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 4</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:jim@dundermifflin.com">jim@dundermifflin.com</a></li>
+                                <li class="list-group-item">School: UNC Chapel Hill</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <!-- Intern -->
+                <div class="card-wrapper">
+                    <div class="card bg-primary text-white employee-card m-5">
+                        <div class="card-header">
+                            <h2 class="card-title">Nard Dog</h2>
+                            <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>Intern</h3>
+                        </div>
+                        <div class="card-body">
+                            <ul class="list-group">
+                                <li class="list-group-item">ID: 5</li>
+                                <li class="list-group-item">Email: <a
+                                        href="mailto:andy@dundermifflin.com">andy@dundermifflin.com</a></li>
+                                <li class="list-group-item">School: Cornell</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
             </div>
         </div>
